improving visibility issue of letter

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -59,7 +59,6 @@ p{
     left: 0;
     width: 100vw;
     height: 100%;
-    box-sizing: border-box;
     overflow-y: scroll;
     background: rgba(255,255,255,0.6);
     visibility: hidden;
